--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,32 @@
-numpy==2.3.1
-pyyaml==6.0.2
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
+dnspython==2.7.0
+email_validator==2.2.0
+fastapi==0.115.14
 fastui==0.7.0
+filelock==3.18.0
+fsspec==2025.5.1
+h11==0.16.0
+hf-xet==1.1.5
+huggingface-hub==0.33.1
+idna==3.10
+numpy==2.3.1
+packaging==25.0
+pydantic==2.11.7
+pydantic_core==2.33.2
 python-multipart==0.0.20
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+sniffio==1.3.1
+starlette==0.46.2
+tokenizers==0.21.2
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+urllib3==2.5.0
+uvicorn==0.35.0
