add github actions

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.4.2
 click==8.2.1
 cloudpathlib==0.21.1
 confection==0.1.5
+coverage==7.10.1
 cymem==2.0.11
 dnspython==2.7.0
 email_validator==2.2.0
@@ -18,6 +19,7 @@ h11==0.16.0
 hf-xet==1.1.5
 huggingface-hub==0.33.1
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
 joblib==1.5.1
 langcodes==3.5.0
@@ -27,17 +29,23 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 murmurhash==1.0.13
+nodeenv==1.9.1
 numpy==2.3.2
 packaging==25.0
+pluggy==1.6.0
 preshed==3.0.10
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
+pyright==1.1.403
+pytest==8.4.1
+pytest-cov==6.2.1
 python-multipart==0.0.20
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
 rich==14.1.0
+ruff==0.12.7
 safetensors==0.5.3
 scikit-learn==1.7.1
 scipy==1.16.1
