--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,36 +1,10 @@
-name: Main CI
+name: Release
 on:
   push:
     branches:
       - releases
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
-      - name: Install deps
-        run: pip install ruff
-      - name: Linting
-        run: ruff check .
-  format:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
-      - name: Install deps
-        run: pip install ruff
-      - name: Formatting
-        run: ruff format . --check
-  pyright:
+  code-quality:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -41,14 +15,16 @@ jobs:
           python-version: '3.12'
       - name: Install deps
         run: pip install -r requirements.txt
+      - name: Linting
+        run: ruff check .
+      - name: Formatting
+        run: ruff format . --check
       - name: Checking
         run: pyright .
   tests:
     runs-on: ubuntu-latest
     needs:
-      - lint
-      - format
-      - pyright
+      - code-quality
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -67,9 +43,7 @@ jobs:
   push-to-main:
     runs-on: ubuntu-latest
     needs: 
-      - lint
-      - format
-      - pyright
+      - code-quality
       - tests
     steps:
       - name: Checkout
@@ -124,13 +98,6 @@ jobs:
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-  build:
-    runs-on: ubuntu-latest
-    needs:
-      - push-to-main
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
@@ -138,14 +105,6 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-      
-      - name: Read release info
-        id: release_info
-        run: |
-          VERSION=$(yq '.version' release.yml)
-          TITLE=$(yq '.title' release.yml)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "title=$TITLE" >> $GITHUB_OUTPUT
             
       - name: Build and push Docker image
         uses: docker/build-push-action@v5.3.0
