--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
+      - name: Install ruff
+        run: pip install ruff
       - name: Linting
         run: ruff check .
       - name: Formatting
