--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,12 +13,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
-      - name: Install deps
-        run: pip install -r requirements.txt
+      - name: Install ruff
+        run: pip install ruff
       - name: Linting
         run: ruff check .
       - name: Formatting
         run: ruff format . --check
+      - name: Install deps
+        run: pip install -r requirements.txt
       - name: Checking
         run: pyright .
   tests:
